Fix sidebar z-index

--- a/Radzen.Blazor/themes/components/blazor/_sidebar.scss
+++ b/Radzen.Blazor/themes/components/blazor/_sidebar.scss
@@ -1,4 +1,4 @@
-$sidebar-z: 2 !default;
+$sidebar-z: 1 !default;
 $sidebar-width: 250px !default;
 $sidebar-border-right: var(--rz-border-normal) !default;
 $sidebar-background-color: var(--rz-base-800) !default;
